Thu May  9 14:35:24 2002  Nanbor Wang  <nanbor@cs.wustl.edu>

	* ace/XML_Svc_Conf.h: Changed to include ACE_export.h instead of
	  config-all.h and added #pragma once macros.

Thu May 09 12:12:59 2002  Nanbor Wang  <nanbor@cs.wustl.edu>

	* ACEXML/apps/svcconf/Svcconf.h:
	* ACEXML/apps/svcconf/Svcconf.cpp:
	* ACEXML/apps/svcconf/Svcconf_Handler.h:
	* ACEXML/apps/svcconf/Svcconf_Handler.cpp: Commented out the code
	  if XML-based Service Configurator is not used.

	* ACEXML/apps/svcconf/Makefile:
	* ACEXML/apps/svcconf/XML_Svc_Conf_Parser.dsp: Removed ACEXML from
	  the list of include path to be consistent with other projects.

Thu May 09 10:53:51 2002  Nanbor Wang  <nanbor@cs.wustl.edu>

	* ACEXML/common/XML_Common.dsp: One more mis-merged project file.

Thu May 09 10:39:17 2002  Nanbor Wang  <nanbor@cs.wustl.edu>

	* ace/ace_dll.dsp:
	* ace/ace_lib.dsp: Fixed link error on win32.  I forgot to merge
	  these project files differently (they can not be merged.)

Thu May  9 01:07:56 2002  Nanbor Wang  <nanbor@cs.wustl.edu>

	* ACEXML/common/StrCharStream.h:
	* ACEXML/common/StrCharStream.cpp: Fixed Linux compilation
	  errors.

Thu May 09 00:38:22 2002  Irfan Pyarali  <irfan@cs.wustl.edu>

	* ace/WFMO_Reactor.cpp (event_handling): Added a fix for bug
	  1161. The problem was described aptly and the fix was applied
	  exactly as suggested by Lyn Headley <headley@wolve.com>:

	  Problem: "The do-while loop in this function is problematic,
	  because active threads is incremented once prior to executing
	  the loop, and then decremented on every iteration of the loop
	  inside safe dispatch().  Thus on the second iteration of the
	  loop active threads is decremented to 2^32, which causes the
	  thread to block on waiting to change state inside update
	  state(), which is never signaled (because there are no other
	  active threads)."

	  Solution: "Moving the do clause of the loop up a few statements
	  to include the increment of active threads (and the acquisition